# cmake

./: README.md
basic1/: CMakeLists.txt
basic2/: CMakeLists.txt
install/: CMakeLists.txt  README
install/src/: CMakeLists.txt
install_test/: runhello.sh
install_test/install/share/doc/cmake/install_test/: hello.txt
install_test/src/: CMakeLists.txt
lib/: CMakeLists.txt  hello.cpp
lib_test/: hello.h
multi_dir/: CMakeLists.txt  main.cpp
multi_dir/hello/: CMakeLists.txt  hello.cpp  hello.h
multi_dir2/: CMakeLists.txt  main.cpp
multi_dir2/conf/: MainConfig.h.in
multi_dir2/hello/: CMakeLists.txt  hello.cpp  hello.h  macro.h
